--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
     <modules>
         <module>concurrent-programming-designs</module>
         <module>api-gateway</module>
+        <module>composite</module>
     </modules>
 
     <repositories>
