drink-server package related changes

--- a/springmvc-raml-based-api-design/drinks-server/src/main/resources/application.properties
+++ b/springmvc-raml-based-api-design/drinks-server/src/main/resources/application.properties
@@ -20,5 +20,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 #
-
-logging.level.com.phoenixnap.oss:INFO
+logging.level.com.phoenixnap.oss=INFO
