--- a/h2-webconsole/src/main/resources/config/application.properties
+++ b/h2-webconsole/src/main/resources/config/application.properties
@@ -31,5 +31,5 @@ spring.jpa.properties.hibernate.format_sql=false
 ###
 #   Logging Settings
 ###
-logging.level.com.memorynotfound=trace
+logging.level.com.musicapp=trace
 logging.level.=error
