--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,23 @@
         <aws-lambda-java-events.version>2.0.1</aws-lambda-java-events.version>
         <jackson.version>2.8.5</jackson.version>
     </properties>
+    <profiles>
+        <profile>
+            <id>
+                test
+            </id>
+        </profile>
+        <profile>
+            <id>
+                development
+            </id>
+        </profile>
+        <profile>
+            <id>
+                production
+            </id>
+        </profile>
+    </profiles>
     <modules>
         <module>concurrent-programming-designs</module>
         <module>api-gateway</module>
