--- a/app.music/src/main/resources/application.properties
+++ b/app.music/src/main/resources/application.properties
@@ -21,3 +21,10 @@
 # THE SOFTWARE.
 #
 
+spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+#spring.datasource.name=musicapp
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.initialize=false
+#spring.datasource.url=jdbc:h2:file:~/musicapp;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
+#spring.jpa.hibernate.ddl-auto = update
