--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,8 @@
         <module>api-gateway</module>
         <module>composite</module>
         <module>core</module>
+        <module>springData</module>
+        <module>OrganizationStructure</module>
         <!--<module>springmvc-raml-based-api-design</module>-->
     </modules>
 
@@ -362,28 +364,28 @@
             <!--checkstyle plug-in. checking against googles styles
                see config at checkstyle.xml
             -->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
-            <!--<version>2.17</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>validate</id>-->
-            <!--<goals>-->
-            <!--<goal>check</goal>-->
-            <!--</goals>-->
-            <!--<phase>validate</phase>-->
-            <!--<configuration>-->
-            <!--<configLocation>checkstyle.xml</configLocation>-->
-            <!--<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>-->
-            <!--<encoding>UTF-8</encoding>-->
-            <!--<consoleOutput>false</consoleOutput>-->
-            <!--<failsOnError>false</failsOnError>-->
-            <!--<includeTestSourceDirectory>false</includeTestSourceDirectory>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <phase>validate</phase>
+                        <configuration>
+                            <configLocation>checkstyle.xml</configLocation>
+                            <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
+                            <encoding>UTF-8</encoding>
+                            <consoleOutput>false</consoleOutput>
+                            <failsOnError>false</failsOnError>
+                            <includeTestSourceDirectory>false</includeTestSourceDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
